# proj-swish-card-game

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile
cmake/: utils.cmake
configurations/: clang_tidy.yml
scripts/: run_clang_format.py
src/: CMakeLists.txt  main.cpp
src/card/: CMakeLists.txt  card.cpp
src/card/include/mdn/: card.hpp
test/: CMakeLists.txt
test/card_test/: CMakeLists.txt  card_test.cpp  tests_data.json
test/test_utils/: CMakeLists.txt  test_utils.cpp
test/test_utils/include/mdn/: test_utils.hpp
